# git-haskell-clone

./: hgit.cabal
src/Git/: Common.hs
src/Git/Pack/: Delta.hs  Packfile.hs
src/Git/Remote/: Operations.hs  PackProtocol.hs  TcpClient.hs
src/Git/Store/: Index.hs  Object.hs  ObjectStore.hs
