Name:               hgit
Version:            0.0.1
License:            BSD3
License-File:       LICENSE
Author:             Stefan Saasen
Maintainer:         Stefan Saasen
Copyright:          Stefan Saasen
Synopsis:           Exploring git in Haskell
Category:           Development
Description:        Exploring git, the git transfer protocols and the object store in Haskell
                    See <http://stefan.saasen.me/articles/git-clone-in-haskell-from-the-bottom-up/> for futher information.
Homepage:           https://bitbucket.org/ssaasen/git-clone-in-haskell-from-the-bottom-up
Cabal-Version:      >= 1.6
Build-Type:         Simple

Source-Repository   head
  Type:             git
  Location:         git@bitbucket.org:ssaasen/git-clone-in-haskell-from-the-bottom-up.git

Flag                small_base
  Description:      Choose the new, split-up base package.

test-suite hgit-testsuite
  type:                     exitcode-stdio-1.0
  main-is:                  TestRunner.hs
  hs-source-dirs:           tests/src, src
  build-depends:            base,
                            test-framework,
                            test-framework-quickcheck2,
                            test-framework-hunit,
                            HUnit,
                            QuickCheck,
                            filepath,
                            zlib,
                            filepath,
                            directory,
                            cryptohash,
                            iteratee,
                            iteratee-compress,
                            bytestring,
                            attoparsec,
                            text,
                            network

executable  hgit
  main-is:          Main.hs
  build-depends:
                    base,
                    filepath,
                    binary-strict,
                    zlib,
                    filepath,
                    directory,
                    cryptohash,
                    iteratee,
                    iteratee-compress,
                    bytestring,
                    attoparsec,
                    text,
                    network,
                    unix,
                    binary,
                    utf8-string,
                    mtl
  ghc-options:
                    -Wall
                    -Werror
                    -rtsopts
                    -fno-warn-unused-do-bind
                    -fno-warn-unused-binds
                    -O2
                    -- -fno-warn-missing-signatures

  hs-source-dirs:
                    src

